--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#pricing">Pricing</a></li>
+        <li><a href="blog.html">Blog</a></li>
+
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -319,13 +321,106 @@
 
 
 
+<!-- Testimonials -->
+<section id="testimonials" style="padding:40px 20px; background:#f9f9f9; text-align:center;">
+  <h2>What Our Clients Say</h2>
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:20px;">
+    <div style="width:300px; padding:20px; background:white; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.1);">
+      <p>"Jirani Web Hub transformed our online presence. Highly recommended!"</p>
+      <strong>- Jane Doe</strong>
+    </div>
+    <div style="width:300px; padding:20px; background:white; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.1);">
+      <p>"Professional, fast, and creative. Best team we've worked with."</p>
+      <strong>- John Smith</strong>
+    </div>
+  </div>
+</section>
+
+
+
+
+<!-- Stats -->
+<section id="stats" style="padding:40px 20px; text-align:center; background:#fff; color:#222;">
+  <h2>Our Achievements</h2>
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:50px; margin-top:20px;">
+    
+    <div style="display:flex; flex-direction:column; align-items:center;">
+      <div style="display:flex; align-items:flex-start;">
+        <h3 style="font-size:40px; margin:0;">15</h3>
+        <span style="color:green; font-size:24px; font-weight:bold; margin-left:3px;">+</span>
+      </div>
+      <p>Websites Designed</p>
+    </div>
+    
+    <div style="display:flex; flex-direction:column; align-items:center;">
+      <div style="display:flex; align-items:flex-start;">
+        <h3 style="font-size:40px; margin:0;">20</h3>
+        <span style="color:green; font-size:24px; font-weight:bold; margin-left:3px;">+</span>
+      </div>
+      <p>Happy Clients</p>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
+<section id="payments" class="section">
+  <h2>Pay via M-Pesa</h2>
+  <p>Pay for your services quickly and securely using M-Pesa:</p>
+  <div class="mpesa-box">
+    <p><strong>Go to:</strong> Lipa na M-Pesa</p>
+    <p><strong>Business No:</strong> Send Money</p>
+    <p><strong>Phone Number:</strong> 0799757915</p>
+    <p><strong>Account:</strong>Kelvin Kariuki Mwangi</p>
+  </div>
+</section>
+
+
+
+
+
+<section id="news-link" style="text-align: center; padding: 50px 0; background-color: #f9f9f9;">
+  <h2>Read Our Latest Articles</h2>
+  <p>Stay updated with tips, news, and insights for your business.</p>
+  <a href="blog.html" 
+     style="
+       display: inline-block;
+       padding: 12px 25px;
+       background-color: #007BFF;
+       color: #fff;
+       font-size: 16px;
+       border-radius: 5px;
+       text-decoration: none;
+       transition: background 0.3s ease;">
+    Go to Blog →
+  </a>
+</section>
+
+<style>
+  #news-link a:hover {
+    background-color: #0056b3;
+  }
+</style>
+
+
+
+
+
+
+
+
 <section id="contact" class="contact-section">
   <div class="contact-container">
     <h2 class="section-title">Let’s Work Together</h2>
     <p class="contact-text">Have a project in mind? Message us directly on WhatsApp and let's get started today.</p>
-    <a class="whatsapp-btn" href="https://wa.me/254799757915" target="_blank" rel="noopener noreferrer" aria-label="Message Jirani Web Hub on WhatsApp">
-      💬 Message Me on WhatsApp
-    </a>
+   <a href="https://wa.me/254799757915" class="whatsapp-float" target="_blank">
+  💬 Chat on WhatsApp
+</a>
+
   </div>
 </section>
 
@@ -518,6 +613,20 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 </script>
+
+
+
+<!-- Newsletter Signup -->
+<section id="newsletter" style="padding:40px 20px; background:#f1f1f1; text-align:center;">
+  <h2>Subscribe to Our Newsletter</h2>
+  <form style="margin-top:15px;">
+    <input type="email" placeholder="Enter your email" required style="padding:10px; width:250px; border-radius:5px; border:1px solid #ccc;">
+    <button type="submit" style="padding:10px 20px; background:#007BFF; color:white; border:none; border-radius:5px;">Subscribe</button>
+  </form>
+</section>
+
+
+
 
 
 
